--- a/View/Organisation/Program/AddProgramView.xaml
+++ b/View/Organisation/Program/AddProgramView.xaml
@@ -10,7 +10,7 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <StackPanel Grid.Row="0" Orientation="Horizontal"  Background="#FF30859A" >
-            <Image   Margin="10,0,10,0" Width="40" Height="40" Panel.ZIndex="23"/>
+            <Image  Source="/PrototypeEDUCOM;component/Ressource/titleAddProgram.png"  Margin="10,0,10,0" Width="40" Height="40" Panel.ZIndex="23"/>
             <Label Content="Ajouter un programme" HorizontalAlignment="Left" VerticalAlignment="Center" FontWeight="Bold" FontSize="16" Grid.Row="0" Foreground="White" />
         </StackPanel>
 
@@ -36,10 +36,10 @@
             <DatePicker SelectedDate="{Binding end_date}" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="10,8,10,8" Grid.Column="1" Grid.Row="2"/>
             
         </Grid>
-        <Button Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Command="{Binding cmdAdd}"  Width="92" Background="#FFEEEEEE" BorderBrush="#FFAAAAAA" Grid.Row="2">
-            <StackPanel Orientation="Horizontal" Width="76">
+        <Button Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Command="{Binding cmdAdd}" Background="#FFEEEEEE" BorderBrush="#FFAAAAAA" Grid.Row="2">
+            <StackPanel Orientation="Horizontal">
                 <Image Source="/PrototypeEDUCOM;component/Ressource/add.png" Width="30" Height="30" />
-                <TextBlock Text="Ajouter" VerticalAlignment="Center" FontWeight="Bold" />
+                <TextBlock Text="Ajouter" Margin="10,0" VerticalAlignment="Center" FontWeight="Bold" />
             </StackPanel>
         </Button>
         <Grid Grid.Row="3">
