--- a/View/Request/ShowRequestUCView.xaml
+++ b/View/Request/ShowRequestUCView.xaml
@@ -3,9 +3,101 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             mc:Ignorable="d">
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition />
+            <ColumnDefinition />
+        </Grid.ColumnDefinitions>
+        
+        <Grid Grid.Column="0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="30" />
+                <RowDefinition Height="80" />
+                <RowDefinition />
+                <RowDefinition />
+            </Grid.RowDefinitions>
+            <StackPanel Orientation="Horizontal">
+                <Label Content="Fiche de demande" HorizontalAlignment="Left" VerticalAlignment="Top" FontWeight="Bold" FontSize="16" Grid.Column="0" Grid.Row="0"/>
+                <Button Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Command="{Binding cmdEditRequest}">
+                    <StackPanel Orientation="Horizontal">
+                        <Image Source="/PrototypeEDUCOM;component/Ressource/edit.png" Width="20" Height="20" />
+                    </StackPanel>
+                </Button>
+                <Button Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Command="{Binding cmdDeleteRequest}">
+                    <StackPanel Orientation="Horizontal">
+                        <Image Source="/PrototypeEDUCOM;component/Ressource/delete.png" Width="20" Height="20" />
+                    </StackPanel>
+                </Button>
+            </StackPanel>
+
+            <Grid Grid.Row="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition />
+                    <RowDefinition />
+                    <RowDefinition />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition />
+                    <ColumnDefinition />
+                    <ColumnDefinition />
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+
+                <Label Content="Date" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="0" Grid.Row="0" FontWeight="Bold"/>
+                <Label Content="Responsable" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="0" Grid.Row="1" FontWeight="Bold"/>
+                <Label Content="Etudiant" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="0" Grid.Row="2" FontWeight="Bold"/>
+                <Label Content="Séjours" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="2" Grid.Row="0" FontWeight="Bold"/>
+                <Label Content="Conseillers" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="2" Grid.Row="1" FontWeight="Bold"/>
+                <Label Content="Satisfaction" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="2" Grid.Row="2" FontWeight="Bold"/>
+                <Label Content="{Binding request.creation_date, StringFormat={}{0:dd/MM/yyyy}}" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="1" Grid.Row="0" />
+                <Label Content="{Binding customer.user}" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="1" Grid.Row="1" />
+                <Label Content="{Binding customer.contact}" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="1" Grid.Row="2" />
+                <Label Content="{Binding request.journey_type}" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="3" Grid.Row="0" />
+                <Label Content="{Binding customer.user}" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="3" Grid.Row="1" />
+                <Label Content="??????????????" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="3" Grid.Row="2" />
+
+            </Grid>
             
+            <Label Content="LA JAUGE !!!!!!!!!!!!!!!!!!!!!!!!!!" Grid.Row="2" />
+            
+            <Grid Grid.Row="3">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="30" />
+                    <RowDefinition />
+                </Grid.RowDefinitions>
+                <StackPanel Orientation="Horizontal"  Grid.Row="0">
+                    <Label Content="Organisation recommandée" VerticalAlignment="Top" FontWeight="Bold" FontSize="14"/>
+                    <Button Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Command="{Binding cmdAddRequest}">
+                        <StackPanel Orientation="Horizontal">
+                            <Image Source="/PrototypeEDUCOM;component/Ressource/add.png" Width="20" Height="20" />
+                        </StackPanel>
+                    </Button>
+                </StackPanel>
+                <ListView Grid.Row="1" Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  ItemsSource="{Binding students}" x:Name="list">
+                    <ListView.View >
+                        <GridView>
+                            <GridView.Columns>
+                                <GridViewColumn Header="Sigle" />
+                                <GridViewColumn Header="Nom" DisplayMemberBinding="{Binding lastname}" />
+                                <GridViewColumn Header="Ville" DisplayMemberBinding="{Binding birthday, StringFormat={}{0:dd/MM/yyyy}}" />
+                                <GridViewColumn Header="Pays" DisplayMemberBinding="{Binding gender}" />
+                                <GridViewColumn>
+                                    <GridViewColumn.CellTemplate>
+                                        <DataTemplate>
+                                            <Button Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Command="{Binding ElementName=list, Path=DataContext.cmdDeleteStudent}" CommandParameter="{Binding}">
+                                                <StackPanel Orientation="Horizontal">
+                                                    <Image Source="/PrototypeEDUCOM;component/Ressource/delete.png" Width="15" Height="15" />
+                                                </StackPanel>
+                                            </Button>
+                                        </DataTemplate>
+                                    </GridViewColumn.CellTemplate>
+                                </GridViewColumn>
+                            </GridView.Columns>
+                        </GridView>
+                    </ListView.View>
+                </ListView>
+            </Grid>
+        </Grid>
     </Grid>
 </UserControl>
