--- a/View/Organisation/Program/Campus/EditCampusView.xaml
+++ b/View/Organisation/Program/Campus/EditCampusView.xaml
@@ -1,18 +1,18 @@
-﻿<Window x:Class="PrototypeEDUCOM.View.Organisation.AddCampusView"
+﻿<Window x:Class="PrototypeEDUCOM.View.Organisation.Program.Campus.EditCampusView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      Title="AddCampusView" Width="300" SizeToContent="Height"  ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+        Title="EditCampusView" Width="300" SizeToContent="Height"  ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="55" />
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="70"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <StackPanel Grid.Row="0" Orientation="Horizontal"  Background="#FF30859A" >
             <Image  Source="/PrototypeEDUCOM;component/Ressource/titleAddCampus.png"  Margin="10,0,10,0" Width="40" Height="40" Panel.ZIndex="23"/>
-            <Label Content="Ajouter un campus" HorizontalAlignment="Left" VerticalAlignment="Center" FontWeight="Bold" FontSize="16" Grid.Row="0" Foreground="White" />
+            <Label Content="Modifier un campus" HorizontalAlignment="Left" VerticalAlignment="Center" FontWeight="Bold" FontSize="16" Grid.Row="0" Foreground="White" />
         </StackPanel>
         <Grid Grid.Row="1">
             <Grid.RowDefinitions>
@@ -26,7 +26,7 @@
             <Label Content="Nom" HorizontalAlignment="Right" Margin="0,6,10,6" Grid.Row="0" />
 
             <StackPanel Grid.Column="1">
-                <TextBox Text="{Binding name, Mode=OneWayToSource}" Grid.Row="0" Margin="10,8,10,2" />
+                <TextBox Text="{Binding name}" Grid.Row="0" Margin="10,8,10,2" />
                 <TextBlock HorizontalAlignment="Left" VerticalAlignment="Top"  Margin="10,2,10,8">
                     <TextBlock.Style>
                         <Style TargetType="{x:Type TextBlock}">
@@ -73,16 +73,16 @@
                 <Label Content="Ville" HorizontalAlignment="Right" Grid.Row="1" Margin="0,6,10,6" Grid.Column="0"/>
                 <Label Content="NPA" HorizontalAlignment="Right" Grid.Row="0"  Margin="0,6,10,6" Grid.Column="2" />
                 <Label Content="Pays" HorizontalAlignment="Right" Grid.Row="1" Margin="0,6,10,6" Grid.Column="2"/>
-                <TextBox Text="{Binding street, Mode=OneWayToSource}" HorizontalAlignment="Stretch" Margin="10,8,10,8" Grid.Row="0" Grid.Column="1"/>
-                <TextBox Text="{Binding city, Mode=OneWayToSource}" HorizontalAlignment="Stretch" Margin="10,8,10,8" Grid.Row="1" Grid.Column="1"/>
-                <TextBox Text="{Binding zip, Mode=OneWayToSource}" HorizontalAlignment="Stretch" Margin="10,8,10,8" Grid.Row="0" Grid.Column="3"/>
-                <TextBox Text="{Binding country, Mode=OneWayToSource}" HorizontalAlignment="Stretch" Margin="10,8,10,8" Grid.Row="1" Grid.Column="3"/>
+                <TextBox Text="{Binding street}" HorizontalAlignment="Stretch" Margin="10,8,10,8" Grid.Row="0" Grid.Column="1"/>
+                <TextBox Text="{Binding city}" HorizontalAlignment="Stretch" Margin="10,8,10,8" Grid.Row="1" Grid.Column="1"/>
+                <TextBox Text="{Binding zip}" HorizontalAlignment="Stretch" Margin="10,8,10,8" Grid.Row="0" Grid.Column="3"/>
+                <TextBox Text="{Binding country}" HorizontalAlignment="Stretch" Margin="10,8,10,8" Grid.Row="1" Grid.Column="3"/>
             </Grid>
         </Grid>
-        <Button Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Command="{Binding cmdAdd}" Background="#FFEEEEEE" BorderBrush="#FFAAAAAA" Grid.Row="3">
+        <Button Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Command="{Binding cmdEdit}" Background="#FFEEEEEE" BorderBrush="#FFAAAAAA" Grid.Row="3">
             <StackPanel Orientation="Horizontal">
-                <Image Source="/PrototypeEDUCOM;component/Ressource/add.png" Width="30" Height="30" />
-                <TextBlock Text="Ajouter" Margin="10,0" VerticalAlignment="Center" FontWeight="Bold" />
+                <Image Source="/PrototypeEDUCOM;component/Ressource/edit.png" Width="30" Height="30" />
+                <TextBlock Text="Modifier" Margin="10,0" VerticalAlignment="Center" FontWeight="Bold" />
             </StackPanel>
         </Button>
         <Grid Grid.Row="4">
