--- a/View/MainView.xaml
+++ b/View/MainView.xaml
@@ -4,7 +4,7 @@
         xmlns:local="clr-namespace:PrototypeEDUCOM.View"
         Title="EDUCOM Manager" Height="700" Width="1000" WindowStartupLocation="CenterScreen">
     <Grid>
-        <TabControl Margin="10,125,10,10" ItemsSource="{Binding tabs}">
+        <TabControl Margin="10,125,10,10" ItemsSource="{Binding tabs.Values}" SelectedItem="{Binding selectedTab}">
             <TabControl.ItemContainerStyle>
                 <Style TargetType="TabItem">
                     <Setter Property="Content" Value="{Binding content}" />
