--- a/View/Request/Proposition/AddPropositionView.xaml
+++ b/View/Request/Proposition/AddPropositionView.xaml
@@ -1,7 +1,7 @@
-﻿<Window x:Class="PrototypeEDUCOM.View.Request.AddRequestView"
+﻿<Window x:Class="PrototypeEDUCOM.View.Request.Proposition.AddPropositionView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="AddRequestView" Width="300" SizeToContent="Height"  ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+      Title="AddRequestView" Width="300" SizeToContent="Height"  ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="55" />
@@ -11,7 +11,7 @@
         </Grid.RowDefinitions>
         <StackPanel Grid.Row="0" Orientation="Horizontal"  Background="#FF30859A" >
             <Image  Source="/PrototypeEDUCOM;component/Ressource/titleAddDemande.png" Margin="10,0,10,0" Width="40" Height="40" Panel.ZIndex="23"/>
-            <Label Content="Ajouter une demande" HorizontalAlignment="Left" VerticalAlignment="Center" FontWeight="Bold" FontSize="16" Grid.Row="0" Foreground="White" />
+            <Label Content="Ajouter une recommandation" HorizontalAlignment="Left" VerticalAlignment="Center" FontWeight="Bold" FontSize="16" Grid.Row="0" Foreground="White" />
         </StackPanel>
 
 
@@ -27,13 +27,12 @@
             </Grid.ColumnDefinitions>
 
             <Label Content="Client" HorizontalAlignment="Right" Margin="0,6,10,6" Grid.Row="0" />
-            <Label Content="Etudiant" HorizontalAlignment="Right" Margin="0,6,10,6" Grid.Row="1"/>
-            <Label Content="Type de séjour" HorizontalAlignment="Right" Margin="0,6,10,6" Grid.Row="2"/>
+            <Label Content="Etudiant" HorizontalAlignment="Right" Margin="0,6,10,6" Grid.Row="1" />
+            <Label Content="Programme" HorizontalAlignment="Right" Margin="0,6,10,6" Grid.Row="2"/>
 
-            <Label Content="{Binding customer}"  Margin="0,6,10,6" Grid.Row="0" Grid.Column="1"/>
-            <ComboBox SelectedItem="{Binding student, Mode=TwoWay}" ItemsSource="{Binding students}" Grid.Row="1" Grid.Column="1" Margin="10,8,10,8" />
-            <ComboBox SelectedItem="{Binding journey, Mode=TwoWay}" ItemsSource="{Binding journeys}" Grid.Row="2" Grid.Column="1" Margin="10,8,10,8" />
-
+            <Label Content="{Binding customer.fullName}"  Margin="0,6,10,6" Grid.Row="0" Grid.Column="1"/>
+            <Label Content="{Binding student.fullName}"  Margin="0,6,10,6" Grid.Row="1" Grid.Column="1"/>
+            <ComboBox SelectedItem="{Binding program}" ItemsSource="{Binding programs}" Grid.Row="2" Grid.Column="1" Margin="10,8,10,8" />
         </Grid>
         <Button Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Command="{Binding cmdAdd}" Background="#FFEEEEEE" BorderBrush="#FFAAAAAA" Grid.Row="2">
             <StackPanel Orientation="Horizontal">
